data/diff_tests/wasmtime/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_123.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\00\60\00\01\7f\02\9e\80\80\80\00\01\03\65\6e"
    "\76\16\6e\6f\6e\5f\72\65\74\75\72\6e\69\6e\67\5f"
    "\66\75\6e\63\74\69\6f\6e\00\00\03\82\80\80\80\00"
    "\01\01\0a\8f\80\80\80\00\01\89\80\80\80\00\00\02"
    "\7f\10\00\41\01\0b\0b"
  )
""
)